compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/innerClass.kt
// RUN_PIPELINE_TILL: KLIB
// FIR_IDENTICAL
class A {
    <!DUPLICATE_CLASS_NAMES!>class B<!>
}

<!DUPLICATE_CLASS_NAMES!>class `A$B`<!>
